Add scrapping Reddit post ("scrapping blockchain post")